--- a/Prototype/public/message.css
+++ b/Prototype/public/message.css
@@ -148,6 +148,13 @@ header {
     /* background-color: #556B2F; */
 }
 
+.userBox {
+    /* background-color: rgb(255, 251, 215); */
+    background-color: white;
+    padding: 20px;
+    border-radius: 30px;
+}
+
 .user-card{
     border-bottom: 2px solid lightgrey;
     margin-bottom: 8px;
