--- a/Prototype/views/teacherResources.ejs
+++ b/Prototype/views/teacherResources.ejs
@@ -52,9 +52,9 @@
                     <% }) %>
                 </div>
                 <div id="changePage">
-                    <button class="btn btn-secondary" onclick="prevPage()">Previous</button>
+                    <button class="grows btnLook btn btn-secondary" onclick="prevPage()">Previous</button>
                     <span id="pageIndicator">1/1</span> <!-- Page indicator -->
-                    <button class="btn btn-secondary" onclick="nextPage()">Next</button>
+                    <button class="grows btnLook btn btn-secondary" onclick="nextPage()">Next</button>
                 </div>
             <% } %>
         </div>
@@ -77,7 +77,8 @@
                         <input type="text" class="form-control" id="url" name="url" required>
                         <label for="file">File</label>
                         <input type="file" class="form-control" id="file" name="file" required>
-                        <button type="submit" class="btn btn-primary">Upload</button>
+                        <br>
+                        <button type="submit" class="grows btnLook btn btn-secondary" style="margin-left: 128px;">Upload</button>
                     </div>
                 </form>
             </div>
