--- a/Prototype/views/home.ejs
+++ b/Prototype/views/home.ejs
@@ -28,7 +28,7 @@
               <ul class="users">
                 <% convUsers.forEach(user=> { %>
       
-                  <div style=" position: relative; margin-bottom: 80px; display: flex; flex-direction: column;">
+                  <div class="grows" style=" position: relative; margin-bottom: 80px; display: flex; flex-direction: column;">
                     <div
                       style="width: 351px; height: 75px; left: 7px; top: 7px; position: absolute; background: #16316b; box-shadow: 0px 0px 0px 7px rgba(0, 0, 0, 0.25); border-radius: 138px; border: 3px #fac104 solid">
                     </div>
