--- a/Prototype/public/home.css
+++ b/Prototype/public/home.css
@@ -1,6 +1,10 @@
 body {
     margin:0;
     padding:0;
+    background-image: linear-gradient(45deg, #eee 12.5%, #f2f2f2 0, #f2f2f2 50%, #eee 0, #eee 62.5%, #f2f2f2 0, #f2f2f2);
+    /* background-repeat: repeat; */
+    /* background-size: 11.31px 11.31px; */
+    /* background-size: 300px 300px; */
 }
 
 h1{
