--- a/Prototype/views/feed.ejs
+++ b/Prototype/views/feed.ejs
@@ -205,7 +205,7 @@
                           </span>
                         </div>
                         <div id="postBox"
-                          style="width: 459px; height: 158px; left: 140px; top: 115px; position: absolute; background: rgb(115, 113, 124); border-radius: 19px; border: 1px rgba(13.75, 61.79, 253.94, 0.20) solid">
+                          style="width: 459px; height: 158px; left: 140px; top: 115px; position: absolute; background: #16316b; border-radius: 19px; border: 2px #fac104 solid;">
                         </div>
                         <!-- <div style="width: 8px; height: 8px; left: 431px; top: 165px; position: absolute; background: #0D0D0D; border-radius: 9999px"></div>
                     <div style="width: 8px; height: 8px; left: 431px; top: 151px; position: absolute; background: #0D0D0D; border-radius: 9999px"></div>
